--- a/src/styles.css
+++ b/src/styles.css
@@ -23,6 +23,15 @@
   color: #61dafb;
 }
 
+#toolbar{
+  background-color: yellow;
+  width: 100% 
+}
+
+#toolbar p{
+  margin: 0;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
