--- a/src/styles.css
+++ b/src/styles.css
@@ -55,7 +55,7 @@
 a{text-align:center;text-decoration:none}
 
 body{
-	font-family:Tahoma,Geneva,sans-serif;
+	font-family:caslon;
 	font-size:16px;
 	font-style:normal;
 	font-weight: 500;
@@ -68,7 +68,7 @@ ol{list-style-type:none}
 	width:100%;
 	padding:0 16px;
 	display:block;
-	position:relative
+	position:relative;
 	}
 
 .menu > ol:first-child{
@@ -83,7 +83,10 @@ ol{list-style-type:none}
 	width:150px;
 	position:relative;
 	perspective:100%;
-	cursor:pointer
+	cursor:pointer;
+	/* font-weight: bold; */
+	font-family: caslon;
+	font-size: 20px;
 	}
 
 .menu-item a{
@@ -91,7 +94,7 @@ ol{list-style-type:none}
 	padding:16px 0;
 	display:block;
 	position:relative;
-	color:#fff;
+	color:navy;
 	border-radius:4px;
 	transition:all .5s ease;
 	transform-style:preserve-3d
@@ -102,28 +105,28 @@ ol{list-style-type:none}
 	padding:16px 0;
 	display:block;
 	position:absolute;
-	color: #fff;
-	font-weight: bold;
+	color: navy;
+	font-weight: lighter;
 	border-radius:4px
 	}
 
 .menu > ol:first-child > .menu-item{display:block}
 
 .menu > ol:first-child > .menu-item > a
-	{background: gold; box-shadow:0 8px 6px -6px #595959}
+	{background: #FFDA1A; box-shadow:0 8px 6px -6px #595959}
 
 .menu > ol:first-child > .menu-item:nth-of-type(2) > a,
 .menu > ol:first-child > .menu-item:nth-of-type(4) > a
 	{border-left:1px solid #fff;border-right:1px solid #fff}
 
 .menu > ol:first-child > .menu-item > a:before
-	{background:gold ;bottom:90%;transform:rotateX(-90deg) translate3d(0,0,75px)}
+	{background:#FFDA1A ;bottom:90%;transform:rotateX(-90deg) translate3d(0,0,75px)}
 
-.menu > ol:first-child > .menu-item:nth-of-type(1) > a:before{content:"Home"}
-.menu > ol:first-child > .menu-item:nth-of-type(2) > a:before{content:"About"}
-.menu > ol:first-child > .menu-item:nth-of-type(3) > a:before{content:"Decorate"}
-.menu > ol:first-child > .menu-item:nth-of-type(4) > a:before{content:""}
-.menu > ol:first-child > .menu-item:nth-of-type(5) > a:before{content:"Meet IRL"}
+.menu > ol:first-child > .menu-item:nth-of-type(1) > a:before{content:"Hem"}
+.menu > ol:first-child > .menu-item:nth-of-type(2) > a:before{content:"Blogg"}
+.menu > ol:first-child > .menu-item:nth-of-type(3) > a:before{content:"Planlösning"}
+.menu > ol:first-child > .menu-item:nth-of-type(4) > a:before{content:"Hitta butik"}
+.menu > ol:first-child > .menu-item:nth-of-type(5) > a:before{content:":-)"}
 
 .menu > ol:first-child > .menu-item:nth-of-type(3) > a:after,
 .menu > ol:first-child > .menu-item:nth-of-type(4) > a:after{
@@ -133,7 +136,7 @@ ol{list-style-type:none}
 	top:0;
 	display:block;
 	position:absolute;
-	color:#fff;
+	color: #0051BA;
 	font-size:20px;
 	text-align:center
 	}
@@ -163,24 +166,24 @@ ol{list-style-type:none}
 	to{display:block;opacity:1;transform:translateY(0)}
 	}
 
-.sub-menu > .menu-item > a{background: gold}
+.sub-menu > .menu-item > a{background: #FFDA1A}
 
 .sub-menu > .menu-item:nth-of-type(2) > a
 	{border-top:1px solid #fff;border-bottom:1px solid #fff}
 
 .sub-menu > .menu-item > a:before
-	{background:gold;top:0}
+	{background:#FFDA1A;top:0}
 
 .menu > ol:first-child > .menu-item:nth-of-type(3) > .sub-menu > .menu-item > a:before{transform:rotateY(-90deg) translate3d(0,0,75px)}
-.menu > ol:first-child > .menu-item:nth-of-type(3) > .sub-menu > .menu-item:nth-of-type(1) > a:before{content:"Bedroom"}
-.menu > ol:first-child > .menu-item:nth-of-type(3) > .sub-menu > .menu-item:nth-of-type(2) > a:before{content:"Living Room"}
-.menu > ol:first-child > .menu-item:nth-of-type(3) > .sub-menu > .menu-item:nth-of-type(3) > a:before{content:"Bathroom"}
+.menu > ol:first-child > .menu-item:nth-of-type(3) > .sub-menu > .menu-item:nth-of-type(1) > a:before{content:"Sovrum"}
+.menu > ol:first-child > .menu-item:nth-of-type(3) > .sub-menu > .menu-item:nth-of-type(2) > a:before{content:"Vardagsrum"}
+.menu > ol:first-child > .menu-item:nth-of-type(3) > .sub-menu > .menu-item:nth-of-type(3) > a:before{content:"Badrum"}
 .menu > ol:first-child > .menu-item:nth-of-type(3) > .sub-menu > .menu-item:hover > a{transform:rotateY(90deg)}
 
 .menu > ol:first-child > .menu-item:nth-of-type(4) > .sub-menu > .menu-item > a:before{transform:rotateY(90deg) translate3d(0,0,75px)}
-.menu > ol:first-child > .menu-item:nth-of-type(4) > .sub-menu > .menu-item:nth-of-type(1) > a:before{content:"Store Locator"}
-.menu > ol:first-child > .menu-item:nth-of-type(4) > .sub-menu > .menu-item:nth-of-type(2) > a:before{content:"Top Picks"}
-.menu > ol:first-child > .menu-item:nth-of-type(4) > .sub-menu > .menu-item:nth-of-type(3) > a:before{content:"Reviews"}
+.menu > ol:first-child > .menu-item:nth-of-type(4) > .sub-menu > .menu-item:nth-of-type(1) > a:before{content:"Butikssökare"}
+.menu > ol:first-child > .menu-item:nth-of-type(4) > .sub-menu > .menu-item:nth-of-type(2) > a:before{content:"Toppval"}
+.menu > ol:first-child > .menu-item:nth-of-type(4) > .sub-menu > .menu-item:nth-of-type(3) > a:before{content:"recensioner"}
 .menu > ol:first-child > .menu-item:nth-of-type(4) > .sub-menu > .menu-item:hover > a{transform:rotateY(-90deg)}
 
 .menu > ol:first-child > .menu-item:hover > .sub-menu{display:block}
@@ -235,7 +238,7 @@ ol{list-style-type:none}
 	background:orange;
 }
 .side-li:nth-child(3){
-	background:gold;
+	background:#FFDA1A;
 }
 .side-li:nth-child(4){
 	background:green;
@@ -265,4 +268,22 @@ a{
 	margin: -5px 2px;
 	padding: 1em 1.5em;
 	right: -1em;
+}
+
+.img-rotate-scale
+{
+transition:all 2.2s ease-in-out;
+-webkit-transition:all 2.2s ease-in-out;
+-moz-transition:all 2.2s ease-in-out;
+-ms-transition:all 2.2s ease-in-out;
+-o-transition:all 2.2s ease-in-out;
+}
+
+.img-rotate-scale:hover
+{
+transform:rotate(720deg) scale(1,1);
+-webkit-transform:rotate(720deg) scale(1,1);
+-moz-transform:rotate(720deg) scale(1,1);
+-ms-transform:rotate(720deg) scale(1,1);
+-o-transform:rotate(720deg) scale(1,1);
 }
