--- a/src/styles.css
+++ b/src/styles.css
@@ -1,40 +1,24 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}npm 
-
-.App-link {
-  color: #61dafb;
-}
 
 .flex{
   margin: 0 auto;
   display: flex;
-  background-color: rgba(100, 100, 100, .5);
-  width: 33%;
-  height: 500px;
+	background-color: goldenrod;
+	color: #fff;
+  width: 45%;
+	height: 700px;
+	font-family: caslon;
+	font-size: 20px;
+	margin-top: 60px;
+	border: groove;
+	box-shadow: 1.25px 2.5px;
+	opacity: 0.75;
 }
 
 #templatelist{
   background-color: rgba(100, 200, 100, .5);
   width: 66%;
-  overflow-y: scroll;
+	overflow-y: scroll;
+	font-family: caslon;
 }
 
 #toolbar{
@@ -218,7 +202,7 @@ ol{list-style-type:none}
 	top: 0;
 	bottom: 0;
 	left: -13em;
-	padding-top: 100px;
+	padding-top: 175px;
 }
 .side-ul{
 	list-style: none;
@@ -286,4 +270,22 @@ transform:rotate(720deg) scale(1,1);
 -moz-transform:rotate(720deg) scale(1,1);
 -ms-transform:rotate(720deg) scale(1,1);
 -o-transform:rotate(720deg) scale(1,1);
+}
+
+.list-items {
+  border-bottom: 0.5px solid whitesmoke;
+  color: navy;
+	padding: .25em;
+	padding: 24px;;
+	text-decoration: none;
+}
+
+.list-items:hover {
+  background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/9632/squiggle.svg");
+  background-position: bottom;
+  background-repeat: repeat-x;
+  background-size: 20%;
+  border-bottom: 0;
+  padding: 24px;
+  text-decoration: none;
 }
